update tools and fix blank emails

--- a/Resources/uber-validation-library/build.gradle
+++ b/Resources/uber-validation-library/build.gradle
@@ -5,7 +5,6 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.t3hh4xx0r.uberverification.library"
         minSdkVersion 15
         targetSdkVersion 20
         versionCode 1
@@ -13,7 +12,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
