--- a/Resources/uber-validation-library/build.gradle
+++ b/Resources/uber-validation-library/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 20
-        versionCode 2
-        versionName "1.1"
+        targetSdkVersion 23
+        versionCode 3
+        versionName "1.1.1"
     }
     buildTypes {
         release {
@@ -20,6 +20,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'joda-time:joda-time:2.3'
 }
 
 apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
