--- a/Resources/uber-validation-library/src/main/AndroidManifest.xml
+++ b/Resources/uber-validation-library/src/main/AndroidManifest.xml
@@ -6,8 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
+        android:label="@string/app_name">
 
     </application>
 
